# Torrer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  install_fixed_binary.sh  rustfmt.toml
examples/: bridges.example.txt  config.example.toml
scripts/: create-deb-package.sh  setup-tor.sh  uninstall.sh  update-stories.sh  verify-installation.sh
src/: lib.rs  main.rs
src/bridge/: collector.rs  manager.rs  mod.rs  types.rs
src/cli/: mod.rs
src/config/: defaults.rs  manager.rs  migration.rs  mod.rs  schema.rs  types.rs  validator.rs
src/core/: backup.rs  daemon.rs  diagnostics.rs  engine.rs  events.rs  fallback.rs  health.rs  metrics.rs  mod.rs  monitoring.rs  notifications.rs  persistence.rs  rate_limiter.rs  scheduler.rs  state.rs
src/error/: mod.rs  types.rs
src/gui/: app.rs  circuit_viz.rs  dialogs.rs  integration_tests.rs  mod.rs  notifications.rs  preferences.rs  settings.rs  statistics.rs  tests.rs  window.rs
src/iptables/: manager.rs  mod.rs  rules.rs
src/logging/: logger.rs  mod.rs
src/security/: dns.rs  firewall.rs  ipv6.rs  leak_detection.rs  mac.rs  mod.rs
src/tor/: circuit.rs  client.rs  commands.rs  country.rs  mod.rs  protocol.rs  relay.rs
src/utils/: async_utils.rs  crypto.rs  format.rs  mod.rs  network.rs  retry.rs  system.rs  time.rs  validation.rs  version.rs
tests/integration/: basic_test.rs  config_test.rs  engine_test.rs  full_workflow_test.rs  status_test.rs
tests/unit/: bridge_test.rs  config_manager_test.rs  config_test.rs  engine_test.rs  error_test.rs  fallback_test.rs  iptables_test.rs  retry_test.rs  (+4 more)
(+23 files in other folders)
