[package]
name = "torrer"
version = "0.1.0"
edition = "2021"
authors = ["Torrer Contributors"]
description = "System-wide Tor routing for Ubuntu with censorship resistance"
license = "GPL-3.0"
repository = "https://github.com/yourusername/torrer"

[lib]
name = "torrer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "net", "macros", "time", "process", "io-util"] }
toml = "0.8"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
gtk4 = { version = "0.8", package = "gtk4", features = ["v4_12"] }
notify-rust = "4.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


